--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@material-ui/core": "^4.12.4",
     "@mui/material": "^7.1.1",
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
+    "firebase": "^11.9.1",
     "react": "^19.1.0",
     "react-alice-carousel": "^2.9.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-html-parser": "^2.0.2",
     "react-router": "^7.6.2"
   },
   "devDependencies": {
