--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-google-button": "^0.8.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.2"
   },
   "devDependencies": {
